# input-monitor

./: .gitignore  LICENSE  README.md  input-monitor.py  pyproject.toml
input_monitor/: __main__.py  app.py
packaging/windows/: build_windows_exe.bat  input-monitor.spec
tests/: test_mouse_middle_click.py
